CHORE: アセットのブランチを排除

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # GG02 専用設定
 /UserSettings/
 /.docs/
+/.assets/
 
 # This .gitignore file should be placed at the root of your Unity project directory
 #
